--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="logo">
-            <span>I</span>PASSARELLI Morgane
+            PASSARELLI Morgane
         </div>
         <!--responsive menu-->
         <div class="menu_toggle"></div>
@@ -91,46 +91,47 @@
                 <div class="card-container">
                     <div class="card-wrapper">
                         <div class="card">
-                            <!---->
                             <div class="card-front">
-                                <p>Booki</p>
-                                <!--<p class="card-price">
-                        64 € / mois
-                    </p>-->
-                                <img src="./assets/booki.jpg" alt="">
+                                <p>Kasa</p>
+                                <img src="./assets/projet-6.png" alt="">
                             </div>
                             <div class="card-back">
-                                <p>Tranformez une maquette en site web avec HTML & CSS</p>
-                                <a href="https://github.com/PMorgane/projet2" class="btn"> Lien github</a>
+                                <p>Une application web de location immobilière avec React</p>
+                                <a href="https://github.com/PMorgane/Kasa_projet7" class="btn">Lien github </a>
                             </div>
 
                         </div>
                     </div>
-
                     <div class="card-wrapper">
                         <div class="card">
                             <div class="card-front">
-                                <p>Ohmyfood</p>
-                                <!-- <p class="card-price">
-                        64 € / mois
-                    </p>-->
-                                <img src="./assets/projet-2.png" alt="">
+                                <p>Kanap</p>
+                                <img src="./assets/projet-5.png" alt="">
                             </div>
                             <div class="card-back">
-                                <p>Dynamisez une page web avec des animations CSS</p>
-                                <a href="https://github.com/PMorgane/ohmyfood" class="btn">Lien github</a>
+                                <p>Une API sécurisée pour une application d'avis gastronomiques</p>
+                                <a href="https://github.com/PMorgane/Kanap-projet5" class="btn">Lien github</a>
                             </div>
 
                         </div>
                     </div>
+                    <div class="card-wrapper">
+                        <div class="card">
+                            <div class="card-front">
+                                <p>Piquante</p>
+                                <img src="./assets/projet-4.png" alt="">
+                            </div>
+                            <div class="card-back">
+                                <p>Un site e-commerce en JavaScript</p>
+                                <a href="https://github.com/PMorgane/Piquante" class="btn"> Lien github</a>
+                            </div>
 
+                        </div>
+                    </div>
                     <div class="card-wrapper">
                         <div class="card">
                             <div class="card-front">
                                 <p>La panthère</p>
-                                <!-- <p class="card-price">
-                        64 € / mois
-                    </p>-->
                                 <img src="./assets/projet-3.png" alt="">
                             </div>
                             <div class="card-back">
@@ -141,51 +142,28 @@
 
                         </div>
                     </div>
-
                     <div class="card-wrapper">
                         <div class="card">
                             <div class="card-front">
-                                <p>Piquante</p>
-                                <!-- <p class="card-price">
-                        64 € / mois
-                    </p>-->
-                                <img src="./assets/projet-4.png" alt="">
+                                <p>Ohmyfood</p>
+                                <img src="./assets/projet-2.png" alt="">
                             </div>
                             <div class="card-back">
-                                <p>Un site e-commerce en JavaScript</p>
-                                <a href="https://github.com/PMorgane/Piquante" class="btn"> Lien github</a>
+                                <p>Dynamisez une page web avec des animations CSS</p>
+                                <a href="https://github.com/PMorgane/ohmyfood" class="btn">Lien github</a>
                             </div>
 
                         </div>
                     </div>
-
                     <div class="card-wrapper">
                         <div class="card">
                             <div class="card-front">
-                                <p>Kanap</p>
-                                <!-- <p class="card-price">
-                        64 € / mois
-                    </p>-->
-                                <img src="./assets/projet-5.png" alt="">
+                                <p>Booki</p>
+                                <img src="./assets/booki.jpg" alt="">
                             </div>
                             <div class="card-back">
-                                <p>Une API sécurisée pour une application d'avis gastronomiques</p>
-                                <a href="https://github.com/PMorgane/Kanap-projet5" class="btn">Lien github</a>
-                            </div>
-
-                        </div>
-                    </div>
-
-
-                    <div class="card-wrapper">
-                        <div class="card">
-                            <div class="card-front">
-                                <p>Kasa</p>
-                                <img src="./assets/projet-6.png" alt="">
-                            </div>
-                            <div class="card-back">
-                                <p>Une application web de location immobilière avec React</p>
-                                <a href="https://github.com/PMorgane/Kasa_projet7" class="btn">Lien github </a>
+                                <p>Tranformez une maquette en site web avec HTML & CSS</p>
+                                <a href="https://github.com/PMorgane/projet2" class="btn"> Lien github</a>
                             </div>
 
                         </div>
