--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         </section>
 
         <article>
-            <div class="title-container" id="projets">
-                <div class="bloc">
+            <div class="title-container" id="projets" >
+                <div class="bloc reveal">
                     <span>P</span>
                     <span>R</span>
                     <span>O</span>
@@ -171,8 +171,8 @@
                 </div>
             </div>
         </article>
-        <article id="outils">
-            <div class="bloc">
+        <article  id="outils">
+            <div class="bloc reveal">
                 <span>O</span>
                 <span>U</span>
                 <span>T</span>
@@ -198,7 +198,7 @@
         </article>
         <footer>
             <div class="contact">
-                <div class="bloc">
+                <div class="bloc reveal-visible">
                     <span>C</span>
                     <span>O</span>
                     <span>N</span>
