--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="#projets">Projets</a></li>
             <li><a href="#outils">Outils</a></li>
             <li><a href="mailto:passarellimorgane43@gmail.com">Contact</a></li>
-            <li class="dowload_li"><a href="./CV Passarelli Morgane.pdf">CV</a></li>
+            <li class="dowload_li"><a href="./Passarelli.pdf">CV</a></li>
         </ul>
     </header>
     <div class="container">
@@ -51,7 +51,7 @@
                 connaissances, mes compétences , mes valeurs et mon intérêt afin que mon projet puisse se concrétiser.-->
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum asperiores similique sint placeat numquam debitis animi tempore modi laudantium, ipsam molestiae, quos rerum omnis delectus, ipsum praesentium sunt corrupti? Perferendis.
             </p>
-            <a href="./CV Passarelli Morgane.pdf" class="dowload_now_link">Consulter mon cv</a>
+            <a href="./Passarelli.pdf" class="dowload_now_link">Consulter mon cv</a>
         </div>
         <!--Div droite-->
         <div class="right">
