video de presentation

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <section class="clipped-section" id="video">
             <div class="clipped-video-container">
                 <!--<h2>Vidéo de motivation</h2>-->
-                <video controls src="ressources/sunset.mp4"></video>
+                <video controls src="./assets/passarellimorgane43@gmail.com.mp4"></video>
             </div>
         </section>
 
