--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 appétence à approfondir et découvrir de nouvelles connaissances me permettent de postuler à une
                 formation de chef de projet digital par alternance. Motivée je suis prête à mettre en lien mes
                 connaissances, mes compétences , mes valeurs et mon intérêt afin que mon projet puisse se concrétiser.-->
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum asperiores similique sint placeat numquam debitis animi tempore modi laudantium, ipsam molestiae, quos rerum omnis delectus, ipsum praesentium sunt corrupti? Perferendis.
+            <p>Je suis disponible et prête à commencer aussitôt que possible. <br> N'hésitez pas à me contacter pour un entretien.
             </p>
             <a href="./Passarelli.pdf" class="dowload_now_link">Consulter mon cv</a>
         </div>
@@ -75,7 +75,7 @@
 
         <article>
             <div class="title-container" id="projets" >
-                <div class="bloc reveal">
+                <div class="bloc">
                     <span>P</span>
                     <span>R</span>
                     <span>O</span>
@@ -172,7 +172,7 @@
             </div>
         </article>
         <article  id="outils">
-            <div class="bloc reveal">
+            <div class="bloc">
                 <span>O</span>
                 <span>U</span>
                 <span>T</span>
@@ -188,17 +188,14 @@
                 <i class="fa-brands fa-js fa-3x"></i>
                 <i class="fa-brands fa-react fa-3x"></i>
                 <i class="fa-brands fa-git-alt fa-3x"></i>
+                <i class="fa-brands fa-github fa-3x"></i>
                 <i class="fa-brands fa-figma fa-3x"></i>
-                <i class="fa-brands fa-wordpress fa-3x"></i>
-                <i class="fa-brands fa-elementor fa-3x"></i>
-                <i class="fa-regular fa-file-word fa-3x"></i>
-                <i class="fa-solid fa-file-excel fa-3x"></i>
-                <i class="fa-solid fa-file-powerpoint fa-3x"></i>
+               
             </div>
         </article>
         <footer>
             <div class="contact">
-                <div class="bloc reveal-visible">
+                <div class="bloc">
                     <span>C</span>
                     <span>O</span>
                     <span>N</span>
