programme de formation

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 connaissances, mes compétences , mes valeurs et mon intérêt afin que mon projet puisse se concrétiser.-->
             <p>Je suis disponible et prête à commencer aussitôt que possible. <br> N'hésitez pas à me contacter pour un entretien.
             </p>
-            <a href="./Passarelli.pdf" class="dowload_now_link">Consulter mon cv</a>
+            <a href="Programme Bachelor Chef de projet digital.pdf.html" class="dowload_now_link">Consulter le programme de formation chez Studi</a>
         </div>
         <!--Div droite-->
         <div class="right">
