lien mis a jour

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     <div class="fond">
                         <a href="mailto:passarellimorgane43@gmail.com"><i class="fa-regular fa-envelope fa-3x"></i></a>
                         <a href="https://github.com/PMorgane"><i class="fa-brands fa-github fa-3x"></i></a>
-                        <a href="https://github.com/PMorgane"><i class="fa-brands fa-linkedin fa-3x"></i></a>
+                        <a href="https://www.linkedin.com/in/morgane-passarelli/"><i class="fa-brands fa-linkedin fa-3x"></i></a>
         
                     </div>
                 </div>
